--- a/index.html
+++ b/index.html
@@ -3,22 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>STC RACING | shinonoi-technology-Club</title>
+    <title>STC RACING | Official Site</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-
-<div id="cursor-dot"></div>
+<body oncontextmenu="return false;"> <div id="cursor-dot"></div>
 <div id="cursor-outline"></div>
 
 <header>
-    <div class="header-content">
-        <h1 class="glitch" data-text="STC RACING">STC RACING</h1>
-        <p class="subtitle">PRECISION ENGINEERING & TRADITION</p>
+    <div class="header-inner">
+        <h1 class="logo-animate">STC RACING</h1>
+        <p class="tagline-animate">Succession of Engineering Excellence</p>
     </div>
 </header>
 
-<nav>
+<nav id="main-nav">
     <ul>
         <li><a href="index.html" class="nav-link">Home</a></li>
         <li><a href="machine.html" class="nav-link">Machine</a></li>
@@ -30,38 +28,24 @@
 
 <main class="container">
     <section class="reveal">
-        <div class="section-label">01 / HERITAGE</div>
+        <div class="category-tag">01 / Heritage</div>
         <h2>THE SUCCESSION</h2>
-        <div class="heritage-card">
+        <div class="content-box">
+            <div class="accent-line"></div>
             <h3>先輩から受け継いだ「魂」</h3>
-            <p>私たちが整備し、走らせるマシンは、歴代の先輩たちが心血を注いで作り上げた「知恵の結晶」です。</p>
-            <p>一見シンプルに見えるフレームの一本一本、エンジンの微細な調整、それらすべてに「1メートルでも先へ」という歴代の想いが宿っています。この伝統のバトンを止めることなく、さらに磨き上げて長野の地を駆け抜けます。</p>
-        </div>
-    </section>
-
-    <section class="reveal" style="margin-top: 80px;">
-        <div class="section-label">02 / MISSION</div>
-        <h2>NEXT TARGET</h2>
-        <div class="mission-grid">
-            <div class="mission-item">
-                <h4>エコマラソン長野</h4>
-                <p>地元長野で開催される、技術の真剣勝負。</p>
-            </div>
-            <div class="mission-item">
-                <h4>HONDA ECO CHALLENGE</h4>
-                <p>全国の強豪が集う、燃費の聖地もてぎへ。</p>
-            </div>
+            <p>私たちが整備し、走らせるマシンは、歴代の先輩たちが心血を注いで作り上げた「知恵の結晶」です。この伝統のバトンを止めることなく、さらに磨き上げて長野の地を駆け抜けます。</p>
         </div>
     </section>
 </main>
 
 <footer>
-    <div class="footer-wrap">
+    <div class="footer-content">
         <p class="copyright">&copy; shinonoi-technology-Club</p>
-        <p class="admin">System Administration: Technical High School Students</p>
+        <p class="admin">Managed by Technical High School Students</p>
     </div>
 </footer>
 
+<script src="menu.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
