--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>STC RACING | Official Site</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body oncontextmenu="return false;"> <div id="cursor-dot"></div>
+<body oncontextmenu="return false;">
+
+<div id="cursor-dot"></div>
 <div id="cursor-outline"></div>
 
 <header>
@@ -14,6 +16,7 @@
         <h1 class="logo-animate">STC RACING</h1>
         <p class="tagline-animate">Succession of Engineering Excellence</p>
     </div>
+    <div class="scroll-down">SCROLL</div>
 </header>
 
 <nav id="main-nav">
@@ -33,7 +36,24 @@
         <div class="content-box">
             <div class="accent-line"></div>
             <h3>先輩から受け継いだ「魂」</h3>
-            <p>私たちが整備し、走らせるマシンは、歴代の先輩たちが心血を注いで作り上げた「知恵の結晶」です。この伝統のバトンを止めることなく、さらに磨き上げて長野の地を駆け抜けます。</p>
+            <p>私たちが整備し、走らせるマシンは、歴代の先輩たちが心血を注いで作り上げた知恵の結晶です。この伝統のバトンを止めることなく、さらに磨き上げて長野の地を駆け抜けます。</p>
+        </div>
+    </section>
+
+    <section class="reveal" style="margin-top: 80px;">
+        <div class="category-tag">02 / Next Mission</div>
+        <h2>FUTURE TARGETS</h2>
+        <div class="grid">
+            <div class="grid-item">
+                <div class="grid-num">01</div>
+                <h4>エコマラソン長野</h4>
+                <p>地元長野の地で、先輩たちの記録を塗り替えるための挑戦。</p>
+            </div>
+            <div class="grid-item">
+                <div class="grid-num">02</div>
+                <h4>全国大会（もてぎ）</h4>
+                <p>全国の強豪校と技術を競い、エンジニアとしての限界に挑む。</p>
+            </div>
         </div>
     </section>
 </main>
