--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <div id="a11y-area"></div>
 
-<div id="cursor-dot" aria-hidden="true"></div>
-<div id="cursor-outline" aria-hidden="true"></div>
+<div id="cursor-dot" class="std-only" aria-hidden="true"></div>
+<div id="cursor-outline" class="std-only" aria-hidden="true"></div>
 
 <header role="banner">
     <div class="header-inner">
