--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
     <title>篠ノ井技術Club | Official Site</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body oncontextmenu="return false;">
+<body> <div id="tech-area"></div>
 
-<div id="a11y-area"></div>
-
-<div id="cursor-dot" class="std-only" aria-hidden="true"></div>
-<div id="cursor-outline" class="std-only" aria-hidden="true"></div>
+<div id="cursor-dot" class="tech-only" aria-hidden="true"></div>
+<div id="cursor-outline" class="tech-only" aria-hidden="true"></div>
 
 <header role="banner">
     <div class="header-inner">
@@ -49,10 +47,10 @@
             <div class="a11y-controller">
                 <span class="mode-text">Standard</span>
                 <label class="switch">
-                    <input type="checkbox" id="a11y-toggle">
+                    <input type="checkbox" id="tech-toggle">
                     <span class="slider"></span>
                 </label>
-                <span class="mode-text">Assist</span>
+                <span class="mode-text">Tech Mode</span>
             </div>
         </div>
         <p class="copyright">&copy; 篠ノ井技術Club (仮称)</p>
