--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div id="custom-cursor"></div>
+    <div id="notification"></div>
 
     <header>
         <h1>篠ノ井技術Club</h1>
@@ -63,7 +64,7 @@
             <h2>メンバー募集</h2>
             <p>対象：中学生</p>
             <p>2026年度、第1期メンバーを募集中です。</p>
-            <button class="button disabled" disabled>入会・見学受付（準備中）</button>
+            <button class="button" onclick="showClosedMessage()">入会・見学のお問い合わせ</button>
         </section>
     </main>
 
