--- a/index.html
+++ b/index.html
@@ -3,36 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>篠ノ井技術Club | 2026年4月始動</title>
-    <link rel="stylesheet" href="style.css">
+    <title>篠ノ井技術Club | Official</title>
+    <link rel="stylesheet" href="/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="loading"><div class="loader"></div><p>SYSTEM LOADING...</p></div>
-    <div id="custom-cursor"></div>
-    <div id="notification"></div>
-
+    <div id="loading"><h1>SYSTEM LOADING...</h1></div>
+    
     <header>
-        <h1>篠ノ井技術Club</h1>
-        <p>2026.04 ACTIVITY START</p>
+        <h1>SHINONOI TECH CLUB</h1>
+        <p>Innovation through Engineering</p>
     </header>
 
     <nav></nav>
 
-    <main>
-        <section id="about" class="fade-in-section">
-            <h2>活動内容</h2>
-            <ul class="main-list"><li>エコカー制作</li><li>各種大会参加</li></ul>
-        </section>
-        <section id="recruit" class="fade-in-section">
-            <h2>メンバー募集</h2>
-            <button class="button" onclick="showClosedMessage()">入会・見学のお問い合わせ</button>
+    <main style="padding: 50px 20px; text-align: center;">
+        <section id="about">
+            <h2>About</h2>
+            <p>2026年4月、新しい技術の風が吹く。</p>
         </section>
     </main>
 
-    <footer><p>&copy; 2026 篠ノ井技術Club</p></footer>
-
-    <script src="script.js"></script>
-    <script src="navi.js"></script>
+    <script src="/menu.js"></script>
 </body>
 </html>
